css/custom.css
.container {
    width: 100%;
    height: 100%;
    max-width: 40rem;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: auto;
    padding-left: 1.5rem;
    padding-right: 1.5rem
}

.header {
    text-align: left;
    margin-top: 3.25rem;
    margin-bottom: 3.25rem;
    cursor: default
}

html {
  font-size: 21px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none
}

h1 {
  font-family: 'Oswald', sans-serif;
	color: #555;
  font-size: 2em;
  line-height: 1;
  font-weight: 700;
  letter-spacing: .05em;
  margin-top: 1.04rem;
  margin-bottom: .13rem
}

h2 {
  font-family: 'Oswald', sans-serif;
  color: #C6C4C9;
  font-size: 1.33em;
  line-height: 1;
  font-weight: 500;
  letter-spacing: .03em;
  margin-top: 0.3rem;
  margin-bottom: 1.5rem
}

h3 {
	color: #555;
  font-family: 'Oswald', sans-serif;
	font-size: 1.0em;
  font-weight: 700;
	margin-top: 1.5rem;
}

body {
  color: #6d6d6d;
  font-family: Helvetica, Arial, sans-serif;
  font-size: 1em;
  line-height: 1.25;
  letter-spacing: 0;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden
}

a {
  color: #6a5acd;
  text-decoration: none;
  /*border-bottom: 1px dotted #C6C4C9;*/
}

a:visited, a:hover, a:active, a:focus {
  color: #6a5acd;
  text-decoration: none;
}

p {
  font-size: 1em;
  margin-bottom: 1.25rem
}

.col-md-8, .col-md-4 {
  font-size: 0.8em;
  margin-bottom: .63rem
}

ul {
    margin: 0;
    padding: 0;
    border: 0;
    font: inherit;
    vertical-align: baseline;
    list-style: none
}

ul.icons {
  cursor: default;
} 

ul.icons li {
  display: inline-block;
}

ul.icons a {
  display: inline-block;
  width: 1.75em;
  height: 1.75em;
  line-height: 1.8em;
  text-decoration: none;
}


@media (max-width:481px) {
  .btn {
    margin: 5px;
  }

  h1 {
    letter-spacing: .025em;
  }

  h2 {
    letter-spacing: .01em;
  }

  ul {
    line-height: 1.5;
  }
}

